--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <p class="Identity">
                 C. File Upload
                 <span style="font-size: 10px; display: block;">
-                    Please upload related photographs and documents
+                    Please upload related proof of identity that you chose only. 
                 </span>
             </p>
 
