for attribute added

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                 <div class="form-group">
                     <div>
                         <input type="text" placeholder="John" required>
-                        <label for="">First Name</label>
+                        <label for="firstname">First Name</label>
                     </div>
                     <div>
                         <input type="text" placeholder="Doe" required>
-                        <label for="">Last Name</label>
+                        <label for="lastname">Last Name</label>
                     </div>
                 </div>
             </div>
@@ -43,11 +43,11 @@
                 <div class="form-group">
                     <div>
                         <input type="text" placeholder="John" required>
-                        <label for="">First Name</label>
+                        <label for="firstname">First Name</label>
                     </div>
                     <div>
                         <input type="text" placeholder="Doe" required>
-                        <label for="">Last Name</label>
+                        <label for="lastname">Last Name</label>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                 <div class="form-group">
                     <div>
                         <input type="date">
-                        <label for="">Date of Birth</label>
+                        <label for="dob"date>Date of Birth</label>
                     </div>
                     <div>
                         <select name="" id="">
@@ -69,7 +69,7 @@
                             <option value="kenyan">Kenyan</option>
                             <option value="nigerian">Nigerian</option>
                         </select>
-                        <label for="">Nationality</label>
+                        <label for="nationality">Nationality</label>
                     </div>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                 <div class="form-group">
                     <div>
                         <input type="text" placeholder="No 2 Ibadan street, Ebute Meta Lagos" required>
-                        <label for="">Street Address</label>
+                        <label for="street">Street Address</label>
                     </div>
                     <div>
                         <input type="text" placeholder="No 4 Ekiti street, Ebute Meta Lagos" required>
@@ -150,11 +150,11 @@
                 <div class="form-group">
                     <div>
                         <input type="text" placeholder="Lagos" required>
-                        <label for="">City</label>
+                        <label for="city">City</label>
                     </div>
                     <div>
                         <input type="text" placeholder="lagos" required>
-                        <label for="">State/Province</label>
+                        <label for="state">State/Province</label>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div class="form-group">
                     <div>
                         <input type="text" placeholder="234001" required>
-                        <label for="">Postal /Zip Code</label>
+                        <label for="zipcode">Postal /Zip Code</label>
                     </div>
                     <div>
                         <select name="" id="">
@@ -171,7 +171,7 @@
                             <option value="Nigeria">Nigeria</option>
                             <option value="Ghana">Ghana</option>
                         </select>
-                        <label for="">Country</label>
+                        <label for="country">Country</label>
                     </div>
                 </div>
             </div>
@@ -180,11 +180,11 @@
                 <div class="form-group">
                     <div>
                         <input type="text" placeholder="08123456789" required>
-                        <label for="">Phone Number</label>
+                        <label for="phonenumber">Phone Number</label>
                     </div>
                     <div>
                         <input type="email" placeholder="yourname@gmail.com" required>
-                        <label for="">Email</label>
+                        <label for="email">Email</label>
                     </div>
                 </div>
             </div>
